...
            <TextView
                android:id="@+id/list_spaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Spaces"/>
            <TextView
                android:id="@+id/list_interested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Interested"/>
            <TextView
                android:id="@+id/list_attendees"
                android:layout_width="wrap_content"
...
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingEnd="50dp">
        <Button
            android:id="@+id/button_interested"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"
            android:text="@string/interested"
...
