...

    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventRecycler"
        android:layout_width="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:layout_height="match_parent"
        android:background="@color/fui_bgGoogle"
...
